--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,30 @@
-body{}
+body{
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  opacity: 0.9;
+  text-align: center;
+}
 
+head{
+  display: inline-block;
+  position: fixed;
+  width: 100%;
+  height: 69px;
+  border-bottom: 1px solid seashell;
+}
+
+.logo{
+  left: 10px;
+}
+
+head nav a{
+  text-decoration: underline;
+}
 .mission{}
 
-.month{}
+.featured{}
 
 .locations{}
 
