--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ a{
   color: seashell;
 }
 
-h2, h4{
+h2, h3, h4{
   text-align: center;
   display: block;
   font-weight: bold;
@@ -29,6 +29,7 @@ header{
   align-items: center;
   z-index: 1;
   top: 0;
+  background-color: black
 }
 
 .logo{
@@ -73,15 +74,46 @@ header{
   justify-content: center;
 }
 
-#monthtext{
+.monthtext{
   width: 1000px;
   padding-top: 30px;
 }
 
 .teapics{
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
-.locations{}
+
+.pics img{
+  height: 200px;
+  width: 300px;
+  display: block;
+  padding: 20px;
+}
+
+.pics h4{
+  margin-top: 10px;
+}
+
+.locations{
+  width: 100%;
+  margin-top: 10px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+  background-repeat: no-repeat;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.locbackground h2{
+  padding: 80px 0 15px 0;
+}
+
+locs{
+  background-color: black;
+  padding: 0 40px;
+  height: 400px;
+}
 
 footer{}
