--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body{
   color: seashell;
   background-color: black;
   opacity: 0.9;
+  text-align: center;
 }
 
 a{
@@ -13,7 +14,6 @@ a{
 }
 
 h2, h3, h4{
-  text-align: center;
   display: block;
   font-weight: bold;
 }
@@ -45,10 +45,13 @@ header{
   display: inline-flex;
 }
 
-.mission{
+.flexcenter{
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+.mission{
   height: 700px;
   padding-top: 70px;
 }
@@ -97,23 +100,26 @@ header{
 }
 
 .locations{
+  height: 500px;
   width: 100%;
-  margin-top: 10px;
+  padding-top: 50px;
+}
+
+.locscontent{
+  width: 1200px;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
   background-repeat: no-repeat;
-  height: 500px;
-  display: flex;
-  justify-content: center;
+  background-size: cover;
+  padding-top: 50px;
 }
 
-.locbackground h2{
-  padding: 80px 0 15px 0;
-}
-
-locs{
+.locs{
   background-color: black;
-  padding: 0 40px;
-  height: 400px;
+  margin: 0 20px;
+  width: 300px;
+  display: inline-block;
+  opacity: 1;
 }
+
 
 footer{}
